--- a/src/components/form/formItem/formItem.css
+++ b/src/components/form/formItem/formItem.css
@@ -1,5 +1,6 @@
 .ant-form-item-label > label.ant-form-item-required::before {
   content: "";
+  margin-right: 0;
 }
 
 .ant-form-item-label label {
